# 0desk

./: README.md  index.html  install.sh
config/: Xresources  gtk-3.0-settings.ini  gtkrc-2.0  user-dirs.dirs  volumeicon  xinitrc
config/fontconfig/: 00-aa.conf  00-overrides.conf
config/openbox/: menu.xml  rc.xml
themes/Zero/: tint2rc
themes/Zero/gtk-2.0/: dark.rc  gtkrc  main.rc
themes/Zero/gtk-3.0/: Makefile.am  gnome-applications.css  gtk-main-common.css  gtk-main-dark.css  gtk-main.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders-dark.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets.css  gtk.gresource  gtk.gresource.xml  settings.ini
themes/Zero/gtk-3.0/assets/: Makefile.am
themes/Zero/gtk-3.0/borders/: Makefile.am
